--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Manrope:700);
 
-$fontfamily: "Manrope", sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Inter:regular,700);
+
+$fontfamily: "Inter", sans-serif;
 
 @import "_nullstyle";
 
@@ -8,10 +9,97 @@ body {
 	width: 100%;
 	background-color: #F5F5F5;
 	font-family: $fontfamily;
-	font-weight: 700;
+	font-weight: 400;
 }
 
 .page {
 	height: 100%;
 }
 
+.container {
+	margin: 0 auto;
+	max-width: 630px;
+	padding: 15px;
+}
+
+.header {
+
+	&__title {
+		font-weight: 700;
+		font-size: 40px;
+		line-height: 48px;
+	}
+}
+
+.new-post {
+
+	&__wrapper {
+	}
+
+	&__title {
+		font-weight: 700;
+		font-size: 40px;
+		line-height: 48px;
+	}
+
+	&__form {
+	}
+
+	&__button-reset {
+	}
+
+	&__button-submit {
+	}
+}
+
+.input {
+
+	&__title {
+	}
+
+	&__discription {
+	}
+}
+
+
+.feed {
+
+	&__wrapper {
+	}
+
+	&__title {
+		font-weight: 700;
+		font-size: 40px;
+		line-height: 48px;
+	}
+}
+.post {
+
+	&__wrapper {
+	}
+
+	&__date {
+	}
+
+	&__title {
+	}
+
+	&__discription {
+	}
+}
+.contacts {
+
+	&__title {
+	}
+}
+
+.contact {
+
+	&__mail {
+	}
+}
+.footer {
+
+		&__cr {
+		}
+}
