--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Manrope:700);
-/*Обнуление*/
+@import url(https://fonts.googleapis.com/css?family=Inter:regular,700); /*Обнуление*/
 * {
   padding: 0;
   margin: 0;
@@ -29,7 +28,7 @@ html, body {
 }
 
 body {
-  font-family: "Manrope", sans-serif;
+  font-family: "Inter", sans-serif;
   line-height: 1;
   font-size: 14px;
   -ms-text-size-adjust: 100%;
@@ -38,7 +37,7 @@ body {
 }
 
 input, button, textarea {
-  font-family: "Manrope", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 input::-ms-clear {
@@ -85,10 +84,33 @@ h1, h2, h3, h4, h5, h6 {
 body {
   width: 100%;
   background-color: #F5F5F5;
-  font-family: "Manrope", sans-serif;
-  font-weight: 700;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
 }
 
 .page {
   height: 100%;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 630px;
+  padding: 15px;
+}
+
+.header__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+}
+
+.new-post__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+}
+.feed__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
 }
