--- a/styles/style.css
+++ b/styles/style.css
@@ -83,41 +83,104 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------*/
 body {
   width: 100%;
-  background-color: #F5F5F5;
+  background: linear-gradient(90deg, #cde6f0, #d8d8d8);
   font-family: "Inter", sans-serif;
   font-weight: 400;
 }
 
-.page {
-  height: 100%;
+.header {
+  padding: 15px 0 0;
+}
+.header__title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+  color: rgb(28, 101, 160);
 }
 
-.container {
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  max-width: 1080px;
+  padding: 15px;
+  color: rgb(65, 64, 64);
+}
+.page {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 20px 50px;
   margin: 0 auto;
-  max-width: 630px;
+  max-width: 1080px;
   padding: 15px;
 }
 
-.header__title {
+.title {
+  margin-bottom: 25px;
   font-weight: 700;
-  font-size: 40px;
-  line-height: 48px;
+  font-size: 32px;
+  line-height: 40px;
 }
 
-.new-post__title {
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 48px;
+.new-post__wrapper {
+  width: 500px;
+  background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box, linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
+  border: 5px solid transparent;
+  border-radius: 20px;
+  padding: 20px 25px;
+}
+@media (max-width: 530px) {
+  .new-post__wrapper {
+    width: calc(100vw - 30px);
+  }
 }
 .input__title {
   display: block;
+  margin-bottom: 30px;
 }
 .input__discription {
   display: block;
+  margin-bottom: 30px;
 }
 
-.feed__title {
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 48px;
+.button {
+  display: flex;
+  justify-content: space-between;
+}
+.feed__wrapper {
+  width: 500px;
+  background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box, linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
+  border: 5px solid transparent;
+  border-radius: 20px;
+  padding: 20px 25px;
+}
+@media (max-width: 530px) {
+  .feed__wrapper {
+    width: calc(100vw - 30px);
+  }
+}
+.post {
+  margin-bottom: 30px;
+  border-bottom: 1px solid black;
+}
+.post__date {
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 24px;
+  color: rgb(69, 121, 218);
+}
+.post__title {
+  margin-bottom: 10px;
+  font-size: 24px;
+  line-height: 28px;
+}
+.post__discription {
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 24px;
 }
