--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ body {
 //! .container {}
 
 .header {
-	padding: 15px 0 0;
+	padding: 15px 0 10px;
 
 	&__title {
 		text-align: center;
@@ -31,9 +31,10 @@ body {
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
-	gap: 20px;
+	margin-top: 20px;
 	max-width: 1080px;
 	padding: 15px;
+	gap: 100px;
 	color: rgb(65, 64, 64);
 
 	&__telegram {}
@@ -63,36 +64,80 @@ body {
 .new-post {
 
 	&__wrapper {
-		width: 500px;
+		width: min(500px, calc(100vw - 30px));
 		background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box,
 			linear-gradient(90deg, #9ad0e6,#b3b1b1) border-box;
 		border: 5px solid transparent;
 		border-radius: 20px;
 		padding: 20px 25px;
-
-		@media (max-width: 530px) {
-			width: calc(100vw - 30px);
-		}
 	}
 
-	&__title {
-		
+	&__title {		
 	}
 
 	&__form {
+	}
+
+	&__error {
+		margin-bottom: 20px;
+		text-align: center;
+		font-size: 14px;
+		line-height: 14px;
+		font-weight: 700;
+		color: rgb(218, 19, 19);
 	}
 }
 
 .input {
 
+
 	&__title {
 		display: block;
-		margin-bottom: 30px;
+		width: 100%;
+		margin-bottom: 10px;
+		padding: 5px;
+		background: inherit;
+		border: 1px solid rgb(197, 197, 197);
+		border-radius: 5px;
+		word-wrap: break-word;
+		font-size: 16px;
+		line-height: 28px;	
+	}
+
+	&__title:focus {
+		border: 1px solid rgb(132, 155, 204);
+	}
+
+	&__title-length {
+		margin-bottom: 20px;
+		text-align: right;
+		font-size: 10px;
+		line-height: 14px;
 	}
 
 	&__discription {
 		display: block;
-		margin-bottom: 30px;
+		width: 100%;
+		height: 210px;
+		resize: none;
+		margin-bottom: 10px;
+		padding: 5px;
+		background: inherit;
+		border: 1px solid rgb(197, 197, 197);
+		border-radius: 5px;
+		font-size: 16px;
+		line-height: 28px;
+	}
+
+	&__discription:focus {
+		border: 1px solid rgb(132, 155, 204);
+	}
+
+	&__discription-length {
+		margin-bottom: 10px;
+		text-align: right;
+		font-size: 10px;
+		line-height: 14px;
 	}
 }
 
@@ -100,24 +145,53 @@ body {
 	display: flex;
 	justify-content: space-between;
 
-	&__reset {}
+	&__reset {
+		display: block;
+		background-color: indianred;
+		border: 1px solid indianred;
+		border-radius: 5px;
+		padding: 0 10px;
+		color: aliceblue;
+		font-size: 16px;
+		line-height: 28px;
+	}
 
-	&__submit {}
+	&__reset:focus {
+		border: 1px solid red;
+	}
+
+	&__submit {
+		display: block;
+		background-color: mediumslateblue;
+		border: 1px solid mediumslateblue;
+		border-radius: 5px;
+		padding: 0 10px;
+		color: aliceblue;
+		font-size: 16px;
+		line-height: 28px;
+	}
+
+	&__submit:focus {
+		border: 1px solid blue;
+	}
+
+	&__reset:hover,
+	&__submit:hover {
+		box-shadow: 0px 3px 3px 2px rgba(0, 0, 0, 0.4);
+		transform: translateY(-1px);
+		transition: all 300ms ease;
+	}
 }
 
 .feed {
 
 	&__wrapper {
-		width: 500px;
+		width: min(500px, calc(100vw - 30px));
 		background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box,
 			linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
 		border: 5px solid transparent;
 		border-radius: 20px;
 		padding: 20px 25px;
-
-		@media (max-width: 530px) {
-			width: calc(100vw - 30px);
-		}
 	}
 
 	&__title {
@@ -131,25 +205,30 @@ body {
 }
 
 .post {
-	margin-bottom: 30px;
-	border-bottom: 1px solid black;
+	margin-bottom: 20px;
+	border-bottom: 1px solid rgb(197, 197, 197);
+
+	&:last-child {
+		margin-bottom: 0;
+		border-bottom: none;
+	}
 
 	&__date {
 		margin-bottom: 10px;
-		font-size: 16px;
-		line-height: 24px;
+		font-size: 14px;
+		line-height: 20px;
 		color: rgb(69, 121, 218);
 	}
 
 	&__title {
 		margin-bottom: 10px;
-		font-size: 24px;
-		line-height: 28px;
+		font-size: 18px;
+		line-height: 24px;
 	}
 
 	&__discription {
 		margin-bottom: 10px;
-		font-size: 16px;
-		line-height: 24px;
+		font-size: 14px;
+		line-height: 20px;
 	}
 }
