--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,6 +107,7 @@ body {
 	}
 
 	&__title-length {
+		display: block;
 		margin-bottom: 20px;
 		text-align: right;
 		font-size: 10px;
@@ -132,6 +133,7 @@ body {
 	}
 
 	&__discription-length {
+		display: block;
 		margin-bottom: 10px;
 		text-align: right;
 		font-size: 10px;
