--- a/styles/style.css
+++ b/styles/style.css
@@ -160,6 +160,7 @@ body {
   border: 1px solid rgb(132, 155, 204);
 }
 .input__title-length {
+  display: block;
   margin-bottom: 20px;
   text-align: right;
   font-size: 10px;
@@ -182,6 +183,7 @@ body {
   border: 1px solid rgb(132, 155, 204);
 }
 .input__discription-length {
+  display: block;
   margin-bottom: 10px;
   text-align: right;
   font-size: 10px;
