--- a/styles/style.css
+++ b/styles/style.css
@@ -113,8 +113,8 @@ body {
 .page {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
   justify-content: center;
+  align-items: flex-start;
   gap: 20px 50px;
   margin: 0 auto;
   max-width: 1080px;
@@ -122,7 +122,8 @@ body {
 }
 
 .title {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
+  padding-bottom: 10px;
   font-weight: 700;
   font-size: 32px;
   line-height: 40px;
@@ -132,11 +133,12 @@ body {
   width: min(500px, 100vw - 30px);
   background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box, linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
   border: 5px solid transparent;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 20px 25px;
 }
 .new-post__error {
   margin-bottom: 20px;
+  height: 14px;
   text-align: center;
   font-size: 14px;
   line-height: 14px;
@@ -162,6 +164,7 @@ body {
 .input__title-length {
   display: block;
   margin-bottom: 20px;
+  height: 14px;
   text-align: right;
   font-size: 10px;
   line-height: 14px;
@@ -185,6 +188,7 @@ body {
 .input__discription-length {
   display: block;
   margin-bottom: 10px;
+  height: 14px;
   text-align: right;
   font-size: 10px;
   line-height: 14px;
@@ -226,13 +230,41 @@ body {
   transition: all 300ms ease;
 }
 
+.feed {
+  align-self: stretch;
+}
 .feed__wrapper {
+  position: relative;
   width: min(500px, 100vw - 30px);
+  height: 100%;
+  max-height: 507px;
   background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box, linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
   border: 5px solid transparent;
-  border-radius: 20px;
-  padding: 20px 25px;
+  border-radius: 10px;
+  padding: 0 25px 20px;
+  overflow-y: auto;
+  scrollbar-width: thin; /* "auto" или "thin"  */
+  scrollbar-color: #b3b1b1 #9ad0e6; /* плашка скролла и дорожка */
 }
+.feed__wrapper::-webkit-scrollbar {
+  width: 8px; /* ширина scrollbar */
+}
+.feed__wrapper::-webkit-scrollbar-track {
+  background: #9ad0e6; /* цвет дорожки */
+  border-radius: 50px; /* закругления дрожки */
+}
+.feed__wrapper::-webkit-scrollbar-thumb {
+  background-color: #b3b1b1; /* цвет плашки */
+  border-radius: 50px; /* закругления плашки */
+  border: 2px solid #9ad0e6; /* padding вокруг плашки */
+}
+.feed__title {
+  position: sticky;
+  top: 0;
+  background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box, linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
+  padding-top: 20px;
+}
+
 .post {
   margin-bottom: 20px;
   border-bottom: 1px solid rgb(197, 197, 197);
