--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,9 +30,8 @@ body {
 	align-items: center;
 	justify-content: center;
 	margin-top: 20px;
-	max-width: 1080px;
 	padding: 15px;
-	gap: 100px;
+	gap: 15px 50px;
 	color: rgb(65, 64, 64);
 
 	&__telegram {}
@@ -46,7 +45,6 @@ body {
 	justify-content: center;
 	align-items: flex-start;
 	gap: 20px 50px;
-	//height: 100%;
 	margin: 0 auto;
 	max-width: 1080px;
 	padding: 15px;
@@ -117,6 +115,7 @@ body {
 		line-height: 14px;
 	}
 
+
 	&__discription {
 		display: block;
 		width: 100%;
@@ -143,6 +142,11 @@ body {
 		font-size: 10px;
 		line-height: 14px;
 	}
+
+	/*&__title-length_error,
+	&__discription-length_error {
+		color: rgb(218, 19, 19);
+	}*/
 }
 
 .button {
@@ -174,7 +178,7 @@ body {
 		font-size: 16px;
 		line-height: 28px;
 	}
-
+	
 	&__submit:focus {
 		border: 1px solid blue;
 	}
@@ -185,6 +189,17 @@ body {
 		transform: translateY(-1px);
 		transition: all 300ms ease;
 	}
+
+	&__disabled {
+		background-color: dimgray;
+		border: 1px solid dimgray;
+	}
+
+	&__disabled:hover,
+	&__disabled:hover {
+		box-shadow: none;
+		transform: translateY(0);
+	}
 }
 
 .feed {
@@ -193,7 +208,6 @@ body {
 	&__wrapper {
 		position: relative;
 		width: min(500px, calc(100vw - 30px));
-		height: 100%;
 		max-height: 507px;
 		background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box, linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
 		border: 5px solid transparent;
@@ -201,7 +215,7 @@ body {
 		padding: 0 25px 20px;
 		overflow-y: auto;
 
-		//!настрокйка скролл-барра
+		//!настройка скролл-барра
 		//скроллбары в Chrome/Edge/Safari
 		&::-webkit-scrollbar {
 			width: 8px; /* ширина scrollbar */
@@ -255,13 +269,16 @@ body {
 
 	&__title {
 		margin-bottom: 10px;
+		word-wrap: break-word;
 		font-size: 18px;
 		line-height: 24px;
 	}
 
 	&__discription {
 		margin-bottom: 10px;
+		word-wrap: break-word;
 		font-size: 14px;
 		line-height: 20px;
+		font-style: oblique;
 	}
 }
