--- a/styles/style.css
+++ b/styles/style.css
@@ -105,9 +105,8 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  max-width: 1080px;
   padding: 15px;
-  gap: 100px;
+  gap: 15px 50px;
   color: rgb(65, 64, 64);
 }
 .page {
@@ -146,6 +145,12 @@ body {
   color: rgb(218, 19, 19);
 }
 
+.input {
+  /*&__title-length_error,
+  &__discription-length_error {
+  	color: rgb(218, 19, 19);
+  }*/
+}
 .input__title {
   display: block;
   width: 100%;
@@ -229,6 +234,14 @@ body {
   transform: translateY(-1px);
   transition: all 300ms ease;
 }
+.button__disabled {
+  background-color: dimgray;
+  border: 1px solid dimgray;
+}
+.button__disabled:hover, .button__disabled:hover {
+  box-shadow: none;
+  transform: translateY(0);
+}
 
 .feed {
   align-self: stretch;
@@ -236,7 +249,6 @@ body {
 .feed__wrapper {
   position: relative;
   width: min(500px, 100vw - 30px);
-  height: 100%;
   max-height: 507px;
   background: linear-gradient(90deg, #e0ecf1, #e7e7e7) padding-box, linear-gradient(90deg, #9ad0e6, #b3b1b1) border-box;
   border: 5px solid transparent;
@@ -281,11 +293,14 @@ body {
 }
 .post__title {
   margin-bottom: 10px;
+  word-wrap: break-word;
   font-size: 18px;
   line-height: 24px;
 }
 .post__discription {
   margin-bottom: 10px;
+  word-wrap: break-word;
   font-size: 14px;
   line-height: 20px;
+  font-style: oblique;
 }
