--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,16 +106,6 @@ body {
 		border: 1px solid rgb(132, 155, 204);
 	}
 
-	&__title-length {
-		display: block;
-		margin-bottom: 20px;
-		height: 14px;
-		text-align: right;
-		font-size: 10px;
-		line-height: 14px;
-	}
-
-
 	&__discription {
 		display: block;
 		width: 100%;
@@ -134,13 +124,27 @@ body {
 		border: 1px solid rgb(132, 155, 204);
 	}
 
+	&__title-notice,
+	&__discription-notice {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 14px;
+	}
+
+	&__title-error,
+	&__title-length,
+	&__discription-error,
 	&__discription-length {
 		display: block;
-		margin-bottom: 10px;
 		height: 14px;
-		text-align: right;
+		text-align: center;
 		font-size: 10px;
 		line-height: 14px;
+	}
+
+	&__title-error,
+	&__discription-error {
+		color: rgb(44, 18, 189);
 	}
 
 	/*&__title-length_error,
@@ -158,7 +162,7 @@ body {
 		background-color: indianred;
 		border: 1px solid indianred;
 		border-radius: 5px;
-		padding: 0 10px;
+		padding: 0 7px;
 		color: aliceblue;
 		font-size: 16px;
 		line-height: 28px;
@@ -173,7 +177,7 @@ body {
 		background-color: mediumslateblue;
 		border: 1px solid mediumslateblue;
 		border-radius: 5px;
-		padding: 0 10px;
+		padding: 0 7px;
 		color: aliceblue;
 		font-size: 16px;
 		line-height: 28px;
@@ -248,14 +252,17 @@ body {
 
 .posts {
 
-	&__wrapper {}
+	&__wrapper {
+		display: flex;
+		flex-direction: column-reverse;
+	}
 }
 
 .post {
 	margin-bottom: 20px;
 	border-bottom: 1px solid rgb(197, 197, 197);
 
-	&:last-child {
+	&:first-child {
 		margin-bottom: 0;
 		border-bottom: none;
 	}
@@ -270,6 +277,7 @@ body {
 	&__title {
 		margin-bottom: 10px;
 		word-wrap: break-word;
+		white-space: pre-line;
 		font-size: 18px;
 		line-height: 24px;
 	}
@@ -277,6 +285,7 @@ body {
 	&__discription {
 		margin-bottom: 10px;
 		word-wrap: break-word;
+		white-space: pre-line;
 		font-size: 14px;
 		line-height: 20px;
 		font-style: oblique;
