--- a/styles/style.css
+++ b/styles/style.css
@@ -166,14 +166,6 @@ body {
 .input__title:focus {
   border: 1px solid rgb(132, 155, 204);
 }
-.input__title-length {
-  display: block;
-  margin-bottom: 20px;
-  height: 14px;
-  text-align: right;
-  font-size: 10px;
-  line-height: 14px;
-}
 .input__discription {
   display: block;
   width: 100%;
@@ -190,13 +182,20 @@ body {
 .input__discription:focus {
   border: 1px solid rgb(132, 155, 204);
 }
-.input__discription-length {
+.input__title-notice, .input__discription-notice {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 14px;
+}
+.input__title-error, .input__title-length, .input__discription-error, .input__discription-length {
   display: block;
-  margin-bottom: 10px;
   height: 14px;
-  text-align: right;
+  text-align: center;
   font-size: 10px;
   line-height: 14px;
+}
+.input__title-error, .input__discription-error {
+  color: rgb(44, 18, 189);
 }
 
 .button {
@@ -208,7 +207,7 @@ body {
   background-color: indianred;
   border: 1px solid indianred;
   border-radius: 5px;
-  padding: 0 10px;
+  padding: 0 7px;
   color: aliceblue;
   font-size: 16px;
   line-height: 28px;
@@ -221,7 +220,7 @@ body {
   background-color: mediumslateblue;
   border: 1px solid mediumslateblue;
   border-radius: 5px;
-  padding: 0 10px;
+  padding: 0 7px;
   color: aliceblue;
   font-size: 16px;
   line-height: 28px;
@@ -277,11 +276,16 @@ body {
   padding-top: 20px;
 }
 
+.posts__wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 .post {
   margin-bottom: 20px;
   border-bottom: 1px solid rgb(197, 197, 197);
 }
-.post:last-child {
+.post:first-child {
   margin-bottom: 0;
   border-bottom: none;
 }
@@ -294,12 +298,14 @@ body {
 .post__title {
   margin-bottom: 10px;
   word-wrap: break-word;
+  white-space: pre-line;
   font-size: 18px;
   line-height: 24px;
 }
 .post__discription {
   margin-bottom: 10px;
   word-wrap: break-word;
+  white-space: pre-line;
   font-size: 14px;
   line-height: 20px;
   font-style: oblique;
